--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 
 img{
+  box-shadow: 3px 3px 3px rgba(0,0,0,0.3);
   width: 150px;
   border-radius: 100px;
+  border: solid;
+  border-color: rgba(0,0,0,0.3)
 }
 .logo-color{
   color: #575F7D;
@@ -30,6 +33,8 @@ h1{
 }
 
 h1, h2{
+  text-shadow: 1px 1px 5px black;
+  letter-spacing: 2px;
   color: #23788F;
 }
 
@@ -43,6 +48,7 @@ h1, h2{
 }
 
 #btn-color{
+  text-shadow: 5px 5px 5px black;
   margin: 10px;
   padding: 10px;
   border-radius: 5px;
@@ -74,6 +80,7 @@ div{
   text-align: center;
 }
 li{
+  text-shadow: 1px 1px 5px black;
   display: inline-block;
   margin-right: 20px;
 }
@@ -84,6 +91,8 @@ ul{
 
 p{
   margin-bottom: 30px;
+  text-shadow: 1px 1px 5px black;
+  letter-spacing: 1px;
 }
 
 @media (max-width: 960px) {
